fix file error on windows